// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLabel styles should render and match snapshot when secondary 1`] = `
.circuit-0 {
  margin-left: 12px;
  margin-left: 0px;
  margin-top: -12px;
  -webkit-transition: margin-top 300ms ease-in-out;
  transition: margin-top 300ms ease-in-out;
  margin-top: 0px;
}

<Styled(div)
  secondary={true}
  visible={true}
>
  <div
    className="circuit-0 circuit-1"
  >
    Item 01
  </div>
</Styled(div)>
`;

exports[`NavLabel styles should render and match snapshot when visible 1`] = `
.circuit-0 {
  margin-left: 12px;
}

<Styled(div)
  visible={true}
>
  <div
    className="circuit-0 circuit-1"
  >
    Item 01
  </div>
</Styled(div)>
`;

exports[`NavLabel styles should render with default styles 1`] = `
.circuit-0 {
  margin-left: 12px;
}

<Styled(div)>
  <div
    className="circuit-0 circuit-1"
  >
    Item 01
  </div>
</Styled(div)>
`;
